- Omit local var type - Make var final